Removed python from py.test command.

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     django18: Django==1.8
     djangomaster: https://github.com/django/django/archive/master.tar.gz
     -rrequirements/requirements-test.txt
-commands = python py.test
+commands = py.test
 
 [testenv:flake8]
 deps = flake8
