Updated requirements files and fixed tox setup.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [pytest]
+addopts = --reuse-db
 DJANGO_SETTINGS_MODULE = tests.settings
-django_find_project = false
 
 [tox]
 envlist = py27-django{16,17,18}, flake8
@@ -15,6 +15,7 @@ deps =
     django17: Django==1.7
     django18: Django==1.8
     djangomaster: https://github.com/django/django/archive/master.tar.gz
+    -rrequirements/requirements-common.txt
     -rrequirements/requirements-test.txt
 commands = py.test
 
