--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,9 @@ exclude = *migrations/*
 max-line-length = 99
 
 [testenv]
-deps = 
-    django17: Django==1.7
-    django18: Django==1.8
+deps =
+    django17: Django~=1.7.0
+    django18: Django~=1.8.0
     djangomaster: https://github.com/django/django/archive/master.tar.gz
     -rrequirements/requirements-common.txt
     -rrequirements/requirements-test.txt
@@ -21,3 +21,12 @@ commands = py.test
 [testenv:flake8]
 deps = flake8
 commands = flake8 accession tests setup.py
+
+[travis]
+python =
+    2.7: py27, flake8
+
+[travis:env]
+DJANGO =
+    1.7: django17
+    1.8: django18, flake8
