--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ addopts = --reuse-db
 DJANGO_SETTINGS_MODULE = tests.settings
 
 [tox]
-envlist = py27-django{18,19,110,111}, flake8
+envlist = py27-django{18,19,110,111}, py27-flake8
 
 [flake8]
 exclude = *migrations/*
@@ -19,7 +19,7 @@ deps =
     -rrequirements/requirements-test.txt
 commands = py.test
 
-[testenv:flake8]
+[testenv:py27-flake8]
 deps = flake8
 commands = flake8 accession tests setup.py
 
@@ -32,4 +32,4 @@ DJANGO =
     1.8: django18
     1.9: django19
     1.10: django110
-    1.11: django111, flake8
+    1.11: django111, py27-flake8
