Update python versions in tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ addopts = --reuse-db
 DJANGO_SETTINGS_MODULE = tests.settings
 
 [tox]
-envlist = py37-django111, py37-flake8
+envlist = py{35,36,37}-django111, py37-flake8
 
 [flake8]
 exclude = *migrations/*
